// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ImageContent 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#F5F5F5",
        "borderRadius": 5,
        "minHeight": 52,
        "padding": 16,
      },
      false,
      Object {
        "elevation": 3,
      },
      false,
      false,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
          "letterSpacing": -0.24,
          "lineHeight": 20,
        },
        Array [
          Object {
            "color": "rgba(0,0,0,0.87)",
          },
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          undefined,
        ],
      ]
    }
  >
    test image
  </Text>
</View>
`;

exports[`renders ImageContent in repost mode 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#F5F5F5",
        "borderRadius": 5,
        "minHeight": 52,
        "padding": 16,
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 255)",
        "marginBottom": 0,
        "minHeight": 0,
        "padding": 0,
      },
      Object {
        "elevation": 3,
      },
      false,
      false,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
          "letterSpacing": -0.24,
          "lineHeight": 20,
        },
        Array [
          Object {
            "color": "rgba(0,0,0,0.87)",
          },
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          undefined,
        ],
      ]
    }
  >
    test image
  </Text>
</View>
`;
